.happypack/s--634231287
SyntaxError: Unexpected token (12:15)

  10 | 
  11 | 
> 12 | export defalut reducers;
     |                ^

BabelLoaderError: SyntaxError: Unexpected token (12:15)

  10 | 
  11 | 
> 12 | export defalut reducers;
     |                ^

    at transpile (/Users/creator/workspace/furuida/node_modules/babel-loader/lib/index.js:61:13)
    at Object.module.exports (/Users/creator/workspace/furuida/node_modules/babel-loader/lib/index.js:155:20)
    at applySyncOrAsync (/Users/creator/workspace/furuida/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/creator/workspace/furuida/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /Users/creator/workspace/furuida/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/Users/creator/workspace/furuida/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/Users/creator/workspace/furuida/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/Users/creator/workspace/furuida/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/Users/creator/workspace/furuida/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/Users/creator/workspace/furuida/node_modules/happypack/lib/HappyWorker.js:32:3)